--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/collisions/v15/ipch/AutoPCH/1e1ef2e484ee5856/WINMAIN.ipch
+*.ipch
+*.opendb
