--- a/collisions/collisions.vcxproj
+++ b/collisions/collisions.vcxproj
@@ -122,6 +122,8 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Cube.cpp" />
+    <ClCompile Include="PhysicsCube.cpp" />
+    <ClCompile Include="RenderCube.cpp" />
     <ClCompile Include="Debug.cpp" />
     <ClCompile Include="DXApp.cpp" />
     <ClCompile Include="Geometry.cpp" />
@@ -132,6 +134,8 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="Cube.h" />
+    <ClInclude Include="PhysicsCube.h" />
+    <ClInclude Include="RenderCube.h" />
     <ClInclude Include="Debug.h" />
     <ClInclude Include="DXApp.h" />
     <ClInclude Include="DXUtil.h" />
