--- a/collisions/collisions.vcxproj
+++ b/collisions/collisions.vcxproj
@@ -121,6 +121,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CollisionDetection.cpp" />
     <ClCompile Include="Cube.cpp" />
     <ClCompile Include="PhysicsCube.cpp" />
@@ -129,11 +130,13 @@
     <ClCompile Include="DXApp.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="KeyboardInput.cpp" />
+    <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="winmain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="CollisionDetection.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="PhysicsCube.h" />
@@ -143,6 +146,7 @@
     <ClInclude Include="DXUtil.h" />
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="KeyboardInput.h" />
+    <ClInclude Include="Transform.h" />
     <ClInclude Include="Triangle.h" />
   </ItemGroup>
   <ItemGroup>
