--- a/collisions/collisions.vcxproj
+++ b/collisions/collisions.vcxproj
@@ -128,7 +128,7 @@
     <ClCompile Include="BoxCollider.cpp" />
     <ClCompile Include="Input.h" />
     <ClCompile Include="MouseInput.cpp" />
-    <ClCompile Include="RenderCube.cpp" />
+    <ClCompile Include="ObjectRenderer.cpp" />
     <ClCompile Include="DXApp.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="KeyboardInput.cpp" />
@@ -147,7 +147,7 @@
     <ClInclude Include="Cube.h" />
     <ClInclude Include="BoxCollider.h" />
     <ClInclude Include="MouseInput.h" />
-    <ClInclude Include="RenderCube.h" />
+    <ClInclude Include="ObjectRenderer.h" />
     <ClInclude Include="DXApp.h" />
     <ClInclude Include="DXUtil.h" />
     <ClInclude Include="Geometry.h" />
