--- a/collisions/collisions.vcxproj
+++ b/collisions/collisions.vcxproj
@@ -120,42 +120,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Application.cpp" />
     <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="Collider.cpp" />
-    <ClCompile Include="CollisionDetection.cpp" />
-    <ClCompile Include="Cube.cpp" />
-    <ClCompile Include="BoxCollider.cpp" />
     <ClCompile Include="Input.h" />
     <ClCompile Include="MouseInput.cpp" />
-    <ClCompile Include="ObjectRenderer.cpp" />
     <ClCompile Include="DXApp.cpp" />
-    <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="KeyboardInput.cpp" />
-    <ClCompile Include="SphereCollider.cpp" />
     <ClCompile Include="Transform.cpp" />
-    <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="TriangleLoader.cpp" />
+    <ClCompile Include="Window.cpp" />
     <ClCompile Include="winmain.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Application.h" />
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="Collider.h" />
-    <ClInclude Include="ColliderIncludes.h" />
-    <ClInclude Include="CollisionDetection.h" />
-    <ClInclude Include="Cube.h" />
-    <ClInclude Include="BoxCollider.h" />
     <ClInclude Include="MouseInput.h" />
-    <ClInclude Include="ObjectRenderer.h" />
     <ClInclude Include="DXApp.h" />
     <ClInclude Include="DXUtil.h" />
-    <ClInclude Include="Geometry.h" />
     <ClInclude Include="KeyboardInput.h" />
-    <ClInclude Include="SphereCollider.h" />
     <ClInclude Include="Transform.h" />
-    <ClInclude Include="Triangle.h" />
     <ClInclude Include="TriangleLoader.h" />
+    <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
