--- a/collisions/collisions.vcxproj
+++ b/collisions/collisions.vcxproj
@@ -127,6 +127,7 @@
   <ItemGroup>
     <ClInclude Include="DXApp.h" />
     <ClInclude Include="DXUtil.h" />
+    <ClInclude Include="Vertex.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
