--- a/collisions/collisions.vcxproj
+++ b/collisions/collisions.vcxproj
@@ -129,6 +129,8 @@
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="Terrain.cpp" />
+    <ClCompile Include="TerrainScene.cpp" />
     <ClCompile Include="ThreadedLoader.cpp" />
     <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Window.cpp" />
@@ -148,6 +150,8 @@
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="Terrain.h" />
+    <ClInclude Include="TerrainScene.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="Window.h" />
