--- a/collisions/collisions.vcxproj.filters
+++ b/collisions/collisions.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="ThreadedLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TerrainTool.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DXApp.h">
@@ -132,6 +135,9 @@
       <Filter>Header Files\Scenes</Filter>
     </ClInclude>
     <ClInclude Include="Input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TerrainTool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
