--- a/collisions/collisions.vcxproj.filters
+++ b/collisions/collisions.vcxproj.filters
@@ -140,6 +140,9 @@
     <ClInclude Include="TerrainTool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ImageMapInfo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
