--- a/collisions/collisions.vcxproj
+++ b/collisions/collisions.vcxproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <ClCompile Include="BoxCollider.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Collider.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="CollisionsScene.cpp" />
     <ClCompile Include="Cube.cpp" />
